<resources>
    <string name="app_name">BenOS Camera</string>
    <string name="take_photo">Photo</string>
    <string name="record_video">Record</string>
    <string name="stop_video">Stop</string>
    <string name="open_videos">Videos</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="gallery">Gallery</string>


    <string name="scanned_result">Scanned: %1$s</string>
    <string name="flash_off">Flash Off</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_auto">Flash Auto</string>
    <string name="aspect_ratio_4_3">4:3</string>
    <string name="aspect_ratio_16_9">16:9</string>
    <string name="about">About</string>
    <string name="copyright">Copyright 2026 by BenOS</string>
    <string name="license_text">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License or (at your option) any later version. \n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of merchantability or fitness for a particular purpose. See the GNU General Public License for more details. \n\nYou should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses.</string>
    <string name="version_format">Version: %1$s</string>
    <string name="donate">Donate</string>
    <string name="donate_url">https://ko-fi.com/ben9412345</string>
    <string name="open_with">Open with</string>
    <string name="change_button_color">Button Color</string>
    <string name="select_color">Select Color</string>
    <string name="custom_color">Custom...</string>
    <string name="enter_hex_color">Enter Hex Color (e.g., #FF0000)</string>
    <string name="invalid_color">Invalid color format</string>
    <string name="color_updated">Color updated</string>
    <string name="color_white">White</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_orange">Orange</string>
    <string name="color_purple">Purple</string>

    <string name="settings">Settings</string>
    <string name="flash_mode_title">Flash Mode</string>
    <string name="flash_mode_summary">Set the default flash mode</string>
    <string name="button_color_title">Button Color</string>
    <string name="button_color_summary">Choose the color of the UI buttons</string>
    <string name="aspect_ratio_title">Aspect Ratio</string>
    <string name="aspect_ratio_summary">Choose the camera aspect ratio</string>
    <string name="tap_to_take_photo_title">Tap to Take Photo</string>
    <string name="tap_to_take_photo_summary">Take a photo when clicking on the screen</string>
    <string name="auto_zoom_title">Automatic Zoom</string>
    <string name="auto_zoom_summary">Automatically zoom when a face or object is detected</string>

    <string name="no_app_to_open_photo">No app to open photo</string>

    <string-array name="flash_modes">
        <item>Off</item>
        <item>On</item>
        <item>Auto</item>
    </string-array>

    <string-array name="flash_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="aspect_ratios">
        <item>4:3</item>
        <item>16:9</item>
    </string-array>

    <string-array name="aspect_ratio_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="no_app_to_open_video">No app to open video</string>
    <string name="no_app_to_open_url">No app found to open URL</string>
    <string name="photo_captured">Photo captured at %1$s</string>

    <string name="check_for_updates">Check for Updates</string>
    <string name="checking_updates">Checking for updates...</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="update_not_available">Your app is up to date.</string>
    <string name="update_error">Error checking for updates.</string>
    <string name="download_update">Download</string>

    <string name="auto_check_updates_title">Auto-check for updates</string>
    <string name="auto_check_updates_summary">Automatically check for new versions on startup</string>

    <string name="storage_location_title">Storage Location</string>
    <string name="storage_location_summary">Choose where to save photos and videos</string>
    <string-array name="storage_locations">
        <item>Internal Storage</item>
        <item>SD Card</item>
    </string-array>
    <string-array name="storage_location_values">
        <item>internal</item>
        <item>sd_card</item>
    </string-array>
</resources>
